--- a/01_flag-of-japan/css/style.css
+++ b/01_flag-of-japan/css/style.css
@@ -1,16 +1,36 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 body {
-    background: #EEE;
-
+  background: #eee;
 }
 
-main {
-
+.flag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-aside {
+.square {
+  display: flex;
+  width: 200px;
+  height: 150px;
+  background-color: #fff;
+  justify-content: center;
+}
 
+.circle {
+  display: flex;
+  width: 75px;
+  height: 75px;
+  background-color: red;
+  border-radius: 50%;
+  align-items: center;
 }
