--- a/01_flag-of-japan/css/style.css
+++ b/01_flag-of-japan/css/style.css
@@ -9,11 +9,13 @@
 }
 
 body {
-  background: #eee;
+  background: #dddddd;
 }
 
 .flag {
   display: flex;
+  height: 100vh;
+  width: 100vw;
   justify-content: center;
   align-items: center;
 }
