--- a/02_menu-easy/css/style.css
+++ b/02_menu-easy/css/style.css
@@ -1,14 +1,30 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 nav {
-
+  display: flex;
+  height: 20vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  justify-content: center;
 }
 
 nav a {
-
+  color: rgb(82, 82, 82);
+  background-color: rgb(243, 243, 243);
+  text-decoration: none;
+  padding: 1rem 6rem;
 }
 nav a:hover {
-
+  color: lightgray;
+  background-color: rgb(95, 95, 95);
 }
